• Fixed a couple layout bugs in the search page header (cityHeader)

--- a/client/templates/city/cityHeader/cityHeader.styl
+++ b/client/templates/city/cityHeader/cityHeader.styl
@@ -73,7 +73,7 @@
     top 14px
     z-index 999
     &.fa-map-signs
-      left 12px
+      left 24px
     &.fa-times
       color #CCC
       display none
@@ -183,6 +183,10 @@
     font-family 'Montserrat', Helvetica, sans-serif
     font-size 14px
     color #272b30
+  .btn.dropdown-toggle.city-sub-header-title
+    .caret
+      position absolute
+      top 19px
 
 .open
   & > .dropdown-toggle
